tests/fixtures/compile_errors/emit_with_invalid_call.fe
contract Foo:
  pub def foo():
    emit MyEvent("foo", 1000)()